--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </style>
 </head>
 <body>
-  <h1>TikTok URL双方向変換ツール</h1>
+  <h1>TikTok URL双方向変換ツール @reppuugumi_rasutoma</h1>
   <p>
     入力されたURLを自動的に<br>
     <strong>vt.tiktok.com ⇄ lite.tiktok.com/t/</strong> に変換します。履歴も保存されます。
